<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lay_back_3"
    tools:context=".AddNewJob">
    <include
        android:id="@+id/add_job_toolbar"
        layout="@layout/custom_toolbar"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/select_image_img"
            android:src="@drawable/add_img_transparent"/>
        <EditText
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorCloud"
            android:background="@color/colorAccentT"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/new_job_title"
            android:hint="@string/str_title"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/new_job_organization"
            android:hint="@string/str_org"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorCloud"
            android:background="@color/colorAccentT"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:id="@+id/new_job_vacancy"
            android:hint="@string/str_vacancy"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorCloud"
            android:background="@color/colorAccentT"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/new_job_deadline"
            android:hint="@string/str_deadline"
            android:clickable="true"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorCloud"
            android:background="@color/colorAccentT"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <LinearLayout
            android:background="@color/colorLight"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_gravity="center_vertical"
                android:id="@+id/spinner_category"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:entries="@array/category_items_arrays"
                android:prompt="@string/category_prompt" />
            <TextView
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="Hot"
                android:textSize="15dp"
                android:layout_width="100dp"
                android:layout_height="match_parent">
            </TextView>
            <CheckBox
                android:id="@+id/chk_box"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </CheckBox>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_post_button"
            android:text="Create"
            android:textColor="@color/colorLight"
            android:background="@drawable/btn_background"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>